# Venom

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
apps/shell/: index.html  package.json  tailwind.config.js
apps/shell/src/: App.tsx  index.css
apps/shell/src/components/: AetherCursor.tsx  AtmosphericCanvas.tsx  BootScreen.tsx  CanvasWallpaper.tsx  ContextMenu.tsx  Desktop.tsx  LockScreen.tsx  WidgetPanel.tsx  WindowFrame.tsx
apps/shell/src/components/apps/: AIChatCenter.tsx  AIComputeHub.tsx  AetherAudioPlayer.tsx  AetherCodeEditor.tsx  AetherMarketplace.tsx  CognitiveLink.tsx  CyberExplorer.tsx  GridBypassGame.tsx  HolonetBrowser.tsx  NeuralNotes.tsx  QuantumCalculator.tsx  QuantumTerminal.tsx  SpatialVisualizer.tsx  SwarmPanel.tsx  SystemMonitor.tsx  SystemPreferences.tsx  TemporalLedger.tsx
apps/shell/src/engine/: SwarmOrchestrator.ts
apps/shell/src/store/: systemStore.ts
apps/shell/src/utils/: VenomSpeechCore.ts  audio.ts
core/aether-compositor/: Cargo.toml
core/aether-compositor/src/: ai_layout.rs  main.rs  performance.rs  render.rs  spatial.rs
core/linux-system/greeter/: greetd.toml
core/linux-system/nixos/: aether-shell.nix  configuration.nix  install.sh
core/linux-system/plymouth/: aether-boot.plymouth
core/linux-system/systemd/: aether-ai.service  aether-core.service
core/tauri-runtime/: Cargo.toml  tauri.conf.json
core/tauri-runtime/src/: ledger.rs  main.rs  services.rs  spatial_sync.rs  swarm.rs
