[package]
name = "tauri-runtime"
version = "1.0.0"
description = "AetherOS Tauri Systems Core Runtime"
authors = ["AetherCorp <dev@aether.corp>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["all-apis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# default to custom-protocol for production builds
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
